static/ridge.css
/* ridge.css */

:root {
  --spacing-3xs: 0.125rem;
  --spacing-2xs: 0.25rem;
  --spacing-xs:  0.5rem;
  --spacing-s:   1rem;
  --spacing-m:   2rem;
  --spacing-l:   4rem;
  --spacing-xl:  8rem;
  --spacing-2xl: 16rem;
  --spacing-3xl: 32rem;
  --spacing-4xl: 64rem;
}

*, *:before, *:after {
  box-sizing: border-box;
}

html, body, main {
  height: 100%;
}

/* pylon.css */

hstack {
  display: flex;
  align-self: stretch;
  align-items: center;
  flex-direction: row;
}

.shrink {
  flex: 2 2;
}

hstack[shrink] > * {
  flex: 2 2;
}

hstack[spacing="xl"] > * {
  margin-right: var(--spacing-xl);
}

hstack[spacing="l"] > * {
  margin-right: var(--spacing-l)
}

hstack[spacing="m"] > * {
  margin-right: var(--spacing-m);
}

hstack[spacing="s"] > * {
  margin-right: var(--spacing-s);
}

hstack[spacing="xs"] > * {
  margin-right: var(--spacing-xs);
}

hstack[spacing="2xs"] > * {
  margin-right: var(--spacing-2xs);
}

hstack[spacing] > :last-child {
  margin-right: 0;
}

hstack[align-y="top"] {
  align-items: flex-start;
}

hstack[align-y="center"] {
  align-items: center;
}

hstack[align-y="bottom"] {
  align-items: flex-end;
}

hstack[align-x="left"] {
  justify-content: flex-start;
}

hstack[align-x="center"] {
  justify-content: center;
}

hstack[align-x="right"] {
  justify-content: flex-end;
}

vstack {
  display: flex;
  align-self: stretch;
  flex-direction: column;
}

vstack[spacing="xl"] > * {
  margin-bottom: var(--spacing-xl);
}

vstack[spacing="l"] > * {
  margin-bottom: var(--spacing-l);
}

vstack[spacing="m"] > * {
  margin-bottom: var(--spacing-m);
}

vstack[spacing="s"] > * {
  margin-bottom: var(--spacing-s);
}

vstack[spacing="xs"] > * {
  margin-bottom: var(--spacing-xs);
}

vstack[spacing="2xs"] > * {
  margin-bottom: var(--spacing-2xs);
}

vstack[spacing] > :last-child {
  margin-bottom: 0;
}

vstack[align-x="left"] {
  align-items: flex-start;
}

vstack[align-x="center"] {
  align-items: center;
}

vstack[align-x="right"] {
  align-items: flex-end;
}

vstack[align-y="top"] {
  justify-content: flex-start;
}

vstack[align-y="center"] {
  justify-content: center;
}

vstack[align-y="bottom"] {
  justify-content: flex-end;
}

spacer {
  flex: 1;
}

[stretch] {
  align-self: stretch;
  flex: 1 1 auto;
}

vstack[stretch] {
  height: 100%;
}

body {
  margin: 0 auto;
  max-width: 969px;
  padding: var(--spacing-m);

  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
  line-height: 1.4;

  color: var(--main);
  background: var(--background);

  transition: background-color var(--animation-duration) linear
}

button, input, textarea, a {
  transition: background-color var(--animation-duration) linear,
              border-color var(--animation-duration) linear,
              color var(--animation-duration) linear,
              box-shadow var(--animation-duration) linear,
              transform var(--animation-duration) ease;
}

h1 {
  font-size: 2.2em;
  margin: 0;
}

h1, h2, h3, h4, h5, h6 {
  margin: 0;
}

h1, h2, h3, h4, h5, h6, strong {
  color: var(--bright);
  margin: 0;
}

h1, h2, h3, h4, h5, h6, b, strong, th {
  font-weight: 600;
}

blockquote {
  border-left: 4px solid var(--focus);
  margin: 1.5em 0em;
  padding: 0.5em 1em;
  font-style: italic;
}

blockquote > footer {
  font-style: normal;
  font-size: 1em;
  color: var(--main);
  border: 0;
}

blockquote cite {
  font-style: normal;
}

address {
  font-style: normal;
}

mark {
  background-color: var(--highlight);
  border-radius: 2px;
  color: #000000;
}

button, select,
input[type='submit'],
input[type='button'],
input[type='checkbox'],
input[type='range'],
input[type='radio'] {
  cursor: pointer;
}

input:not([type='checkbox']):not([type='radio']),
select {
  display: block;
}

input,
button,
textarea,
select {
  color: var(--form-text);
  background-color: var(--background-dim);

  font-family: inherit;
  font-size: inherit;

  padding: 10px;

  border: none;
  border-radius: 6px;
  outline: none;
}

button {
  color: var(--background);
  background-color: var(--button);
}

input[type='submit'] {
  color: var(--link);
  background-color: transparent;
}

input:not([type='checkbox']):not([type='radio']),
select,
button,
textarea {
  -webkit-appearance: none;
}

textarea {
  margin-right: 0;
  width: 100%;
  resize: vertical;
}

select {
  background: var(--background-dim) var(--select-arrow) calc(100% - 12px) 50% / 12px no-repeat;
  padding-right: 35px;
}

select::-ms-expand {
  display: none;
}

select[multiple] {
  padding-right: 10px;
  background-image: none;
  overflow-y: auto;
}

button,
input[type='button'] {
  padding-right: 30px;
  padding-left: 30px;
}

button:hover,
input[type='button']:hover {
  background: var(--button-hover);
}

input:focus,
select:focus,
button:focus,
textarea:focus {
  box-shadow: 0 0 0 2px var(--focus);
}

input[type='radio'] {
  appearance: radio;
}

input[type='submit']:active,
input[type='button']:active,
input[type='range']:active,
button:active {
  transform: translateY(2px);
}

input:disabled,
select:disabled,
button:disabled,
textarea:disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

::-webkit-input-placeholder {
  color: var(--form-placeholder);
}

::-moz-placeholder {
  color: var(--form-placeholder);
}

::-ms-input-placeholder {
  color: var(--form-placeholder);
}

::placeholder {
  color: var(--form-placeholder);
}

fieldset {
  border: 1px var(--focus) solid;
  border-radius: 6px;
  margin: 0;
  margin-bottom: 6px;
  padding: 10px;
}

legend {
  font-size: 0.9em;
  font-weight: 600;
}

input[type='range'] {
  margin: 10px 0;
  padding: 10px 0;
  background: transparent;
}

input[type='range']:focus {
  outline: none;
}

input[type='range']::-webkit-slider-runnable-track {
  width: 100%;
  height: 9.5px;
  transition: 0.2s;
  background: var(--background-dim);
  border-radius: 1px;
}
/* ... */

